@@ -7,6 +7,7 @@
  * `XTESTS_COMMANDLINE_PARSE_VERBOSITY()` now also recognises, if the command-line argument `"--verbosity= . . ."` is not found, the enviroment variables `"XTESTS_VERBOSITY"` and `"TEST_VERBOSITY"`;
  * updated **STLSoft** constructs, incl. macros;
  * minor improvements to project boilerplate files;
+ * minor tidying to CMake facilities;
 
 
 18th November 2024 - 0.25.4
